--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             </div>
             
             <div class="bg-gray-800 p-4 rounded-lg shadow-lg hover:scale-105 transition-transform">
-                <h3 class="text-xl font-semibold text-cyan-400">Data & Optimization</h3>
+                <h3 class="text-xl font-semibold text-cyan-400">Website Development</h3>
                 <ul class="mt-2 text-gray-300">
-                    <li>✔ Data Transfer | OS Updates | Performance Tweaks</li>
+                    <li>✔ Landing page designs | Web Designs | Development of Portfolio </li>
                 </ul>
             </div>
             
